--- a/style.css
+++ b/style.css
@@ -211,3 +211,9 @@ ul.option > li i.fa-regular {
 .liColorClear {
   animation: none !important;
 }
+
+@media screen and (max-width: 700px) {
+  .container {
+    height: 50%;
+  }
+}
