--- a/style.css
+++ b/style.css
@@ -212,8 +212,36 @@ ul.option > li i.fa-regular {
   animation: none !important;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1200px) {
+  body {
+    justify-content: center;
+  }
   .container {
-    height: 50%;
+    height: 60%;
+    align-items: center;
+  }
+  .container .computer, .container .player {
+    width: 80%;
+    height: 55%;
+  }
+}
+@media screen and (max-width: 700px) {
+  body {
+    justify-content: center;
+  }
+  .container {
+    height: 90%;
+    align-items: center;
+    flex-direction: column;
+  }
+  .container .computer {
+    margin-bottom: 10px;
+  }
+  .container .computer, .container .player {
+    width: 80%;
+    height: 40%;
+  }
+  .container .computer h2, .container .player h2 {
+    font-size: 1.4rem;
   }
 }
